--- a/applications/electron/package.json
+++ b/applications/electron/package.json
@@ -3,7 +3,7 @@
   "name": "theia-ide-electron-app",
   "description": "Eclipse Theia IDE product",
   "productName": "Theia IDE",
-  "version": "1.61.0",
+  "version": "1.62.0",
   "main": "scripts/theia-electron-main.js",
   "license": "MIT",
   "author": "Eclipse Theia <theia-dev@eclipse.org>",
@@ -54,72 +54,74 @@
     }
   },
   "dependencies": {
-    "@theia/ai-anthropic": "1.61.0",
-    "@theia/ai-chat": "1.61.0",
-    "@theia/ai-chat-ui": "1.61.0",
-    "@theia/ai-code-completion": "1.61.0",
-    "@theia/ai-core": "1.61.0",
-    "@theia/ai-google": "1.61.0",
-    "@theia/ai-history": "1.61.0",
-    "@theia/ai-huggingface": "1.61.0",
-    "@theia/ai-ide": "1.61.0",
-    "@theia/ai-llamafile": "1.61.0",
-    "@theia/ai-mcp": "1.61.0",
-    "@theia/ai-ollama": "1.61.0",
-    "@theia/ai-openai": "1.61.0",
-    "@theia/ai-scanoss": "1.61.0",
-    "@theia/ai-terminal": "1.61.0",
-    "@theia/bulk-edit": "1.61.0",
-    "@theia/callhierarchy": "1.61.0",
-    "@theia/collaboration": "1.61.0",
-    "@theia/console": "1.61.0",
-    "@theia/core": "1.61.0",
-    "@theia/debug": "1.61.0",
-    "@theia/dev-container": "1.61.0",
-    "@theia/editor": "1.61.0",
-    "@theia/editor-preview": "1.61.0",
-    "@theia/electron": "1.61.0",
-    "@theia/external-terminal": "1.61.0",
-    "@theia/file-search": "1.61.0",
-    "@theia/filesystem": "1.61.0",
-    "@theia/getting-started": "1.61.0",
-    "@theia/keymaps": "1.61.0",
-    "@theia/markers": "1.61.0",
-    "@theia/memory-inspector": "1.61.0",
-    "@theia/messages": "1.61.0",
-    "@theia/metrics": "1.61.0",
-    "@theia/mini-browser": "1.61.0",
-    "@theia/monaco": "1.61.0",
-    "@theia/navigator": "1.61.0",
-    "@theia/outline-view": "1.61.0",
-    "@theia/output": "1.61.0",
-    "@theia/plugin-dev": "1.61.0",
-    "@theia/plugin-ext": "1.61.0",
-    "@theia/plugin-ext-vscode": "1.61.0",
-    "@theia/preferences": "1.61.0",
-    "@theia/process": "1.61.0",
-    "@theia/property-view": "1.61.0",
-    "@theia/remote": "1.61.0",
-    "@theia/scm": "1.61.0",
-    "@theia/search-in-workspace": "1.61.0",
-    "@theia/secondary-window": "1.61.0",
-    "@theia/task": "1.61.0",
-    "@theia/terminal": "1.61.0",
-    "@theia/timeline": "1.61.0",
-    "@theia/toolbar": "1.61.0",
-    "@theia/typehierarchy": "1.61.0",
-    "@theia/userstorage": "1.61.0",
-    "@theia/variable-resolver": "1.61.0",
-    "@theia/vsx-registry": "1.61.0",
-    "@theia/workspace": "1.61.0",
+    "@theia/ai-anthropic": "1.62.0",
+    "@theia/ai-chat": "1.62.0",
+    "@theia/ai-chat-ui": "1.62.0",
+    "@theia/ai-code-completion": "1.62.0",
+    "@theia/ai-core": "1.62.0",
+    "@theia/ai-google": "1.62.0",
+    "@theia/ai-history": "1.62.0",
+    "@theia/ai-huggingface": "1.62.0",
+    "@theia/ai-ide": "1.62.0",
+    "@theia/ai-llamafile": "1.62.0",
+    "@theia/ai-mcp": "1.62.0",
+    "@theia/ai-ollama": "1.62.0",
+    "@theia/ai-openai": "1.62.0",
+    "@theia/ai-scanoss": "1.62.0",
+    "@theia/ai-terminal": "1.62.0",
+    "@theia/ai-vercel-ai": "1.62.0",
+    "@theia/bulk-edit": "1.62.0",
+    "@theia/callhierarchy": "1.62.0",
+    "@theia/collaboration": "1.62.0",
+    "@theia/console": "1.62.0",
+    "@theia/core": "1.62.0",
+    "@theia/debug": "1.62.0",
+    "@theia/dev-container": "1.62.0",
+    "@theia/editor": "1.62.0",
+    "@theia/editor-preview": "1.62.0",
+    "@theia/electron": "1.62.0",
+    "@theia/external-terminal": "1.62.0",
+    "@theia/file-search": "1.62.0",
+    "@theia/filesystem": "1.62.0",
+    "@theia/getting-started": "1.62.0",
+    "@theia/keymaps": "1.62.0",
+    "@theia/markers": "1.62.0",
+    "@theia/memory-inspector": "1.62.0",
+    "@theia/messages": "1.62.0",
+    "@theia/metrics": "1.62.0",
+    "@theia/mini-browser": "1.62.0",
+    "@theia/monaco": "1.62.0",
+    "@theia/navigator": "1.62.0",
+    "@theia/outline-view": "1.62.0",
+    "@theia/output": "1.62.0",
+    "@theia/plugin-dev": "1.62.0",
+    "@theia/plugin-ext": "1.62.0",
+    "@theia/plugin-ext-vscode": "1.62.0",
+    "@theia/preferences": "1.62.0",
+    "@theia/process": "1.62.0",
+    "@theia/property-view": "1.62.0",
+    "@theia/remote": "1.62.0",
+    "@theia/remote-wsl": "1.62.0",
+    "@theia/scm": "1.62.0",
+    "@theia/search-in-workspace": "1.62.0",
+    "@theia/secondary-window": "1.62.0",
+    "@theia/task": "1.62.0",
+    "@theia/terminal": "1.62.0",
+    "@theia/timeline": "1.62.0",
+    "@theia/toolbar": "1.62.0",
+    "@theia/typehierarchy": "1.62.0",
+    "@theia/userstorage": "1.62.0",
+    "@theia/variable-resolver": "1.62.0",
+    "@theia/vsx-registry": "1.62.0",
+    "@theia/workspace": "1.62.0",
     "fs-extra": "^9.0.1",
-    "theia-ide-launcher-ext": "1.61.0",
-    "theia-ide-product-ext": "1.61.0",
-    "theia-ide-updater-ext": "1.61.0"
+    "theia-ide-launcher-ext": "1.62.0",
+    "theia-ide-product-ext": "1.62.0",
+    "theia-ide-updater-ext": "1.62.0"
   },
   "devDependencies": {
-    "@theia/cli": "1.61.0",
-    "@theia/native-webpack-plugin": "1.61.0",
+    "@theia/cli": "1.62.0",
+    "@theia/native-webpack-plugin": "1.62.0",
     "@types/js-yaml": "^3.12.0",
     "@types/yargs": "17.0.7",
     "@wdio/cli": "^6.10.2",
