Test build for current Theia master (Theia IDE 1.62.101)
Signed-off-by: Simon Graband <sgraband@eclipsesource.com>

--- a/theia-extensions/updater/package.json
+++ b/theia-extensions/updater/package.json
@@ -1,12 +1,12 @@
 {
   "private": true,
   "name": "theia-ide-updater-ext",
-  "version": "1.62.100",
+  "version": "1.62.101",
   "description": "Eclipse Theia IDE Updater",
   "dependencies": {
-    "@theia/core": "1.62.1",
-    "@theia/output": "1.62.1",
-    "@theia/preferences": "1.62.1",
+    "@theia/core": "1.63.0-next.24",
+    "@theia/output": "1.63.0-next.24",
+    "@theia/preferences": "1.63.0-next.24",
     "electron-log": "^4.3.0",
     "electron-updater": "5.3.0",
     "fs-extra": "^10.0.0",
