--- a/applications/browser/package.json
+++ b/applications/browser/package.json
@@ -3,7 +3,7 @@
   "name": "theia-ide-browser-app",
   "description": "Eclipse Theia IDE browser product",
   "productName": "Theia IDE",
-  "version": "1.62.100",
+  "version": "1.62.101",
   "license": "MIT",
   "author": "Eclipse Theia <theia-dev@eclipse.org>",
   "homepage": "https://github.com/eclipse-theia/theia-ide#readme",
@@ -47,70 +47,70 @@
     }
   },
   "dependencies": {
-    "@theia/ai-anthropic": "1.62.1",
-    "@theia/ai-chat": "1.62.1",
-    "@theia/ai-chat-ui": "1.62.1",
-    "@theia/ai-code-completion": "1.62.1",
-    "@theia/ai-core": "1.62.1",
-    "@theia/ai-google": "1.62.1",
-    "@theia/ai-history": "1.62.1",
-    "@theia/ai-huggingface": "1.62.1",
-    "@theia/ai-ide": "1.62.1",
-    "@theia/ai-llamafile": "1.62.1",
-    "@theia/ai-mcp": "1.62.1",
-    "@theia/ai-ollama": "1.62.1",
-    "@theia/ai-openai": "1.62.1",
-    "@theia/ai-scanoss": "1.62.1",
-    "@theia/ai-terminal": "1.62.1",
-    "@theia/ai-vercel-ai": "1.62.1",
-    "@theia/bulk-edit": "1.62.1",
-    "@theia/callhierarchy": "1.62.1",
-    "@theia/collaboration": "1.62.1",
-    "@theia/console": "1.62.1",
-    "@theia/core": "1.62.1",
-    "@theia/debug": "1.62.1",
-    "@theia/dev-container": "1.62.1",
-    "@theia/editor": "1.62.1",
-    "@theia/editor-preview": "1.62.1",
-    "@theia/external-terminal": "1.62.1",
-    "@theia/file-search": "1.62.1",
-    "@theia/filesystem": "1.62.1",
-    "@theia/getting-started": "1.62.1",
-    "@theia/keymaps": "1.62.1",
-    "@theia/markers": "1.62.1",
-    "@theia/memory-inspector": "1.62.1",
-    "@theia/messages": "1.62.1",
-    "@theia/metrics": "1.62.1",
-    "@theia/mini-browser": "1.62.1",
-    "@theia/monaco": "1.62.1",
-    "@theia/navigator": "1.62.1",
-    "@theia/outline-view": "1.62.1",
-    "@theia/output": "1.62.1",
-    "@theia/plugin-dev": "1.62.1",
-    "@theia/plugin-ext": "1.62.1",
-    "@theia/plugin-ext-vscode": "1.62.1",
-    "@theia/preferences": "1.62.1",
-    "@theia/process": "1.62.1",
-    "@theia/property-view": "1.62.1",
-    "@theia/remote": "1.62.1",
-    "@theia/scm": "1.62.1",
-    "@theia/search-in-workspace": "1.62.1",
-    "@theia/secondary-window": "1.62.1",
-    "@theia/task": "1.62.1",
-    "@theia/terminal": "1.62.1",
-    "@theia/timeline": "1.62.1",
-    "@theia/toolbar": "1.62.1",
-    "@theia/typehierarchy": "1.62.1",
-    "@theia/userstorage": "1.62.1",
-    "@theia/variable-resolver": "1.62.1",
-    "@theia/vsx-registry": "1.62.1",
-    "@theia/workspace": "1.62.1",
+    "@theia/ai-anthropic": "1.63.0-next.24",
+    "@theia/ai-chat": "1.63.0-next.24",
+    "@theia/ai-chat-ui": "1.63.0-next.24",
+    "@theia/ai-code-completion": "1.63.0-next.24",
+    "@theia/ai-core": "1.63.0-next.24",
+    "@theia/ai-google": "1.63.0-next.24",
+    "@theia/ai-history": "1.63.0-next.24",
+    "@theia/ai-huggingface": "1.63.0-next.24",
+    "@theia/ai-ide": "1.63.0-next.24",
+    "@theia/ai-llamafile": "1.63.0-next.24",
+    "@theia/ai-mcp": "1.63.0-next.24",
+    "@theia/ai-ollama": "1.63.0-next.24",
+    "@theia/ai-openai": "1.63.0-next.24",
+    "@theia/ai-scanoss": "1.63.0-next.24",
+    "@theia/ai-terminal": "1.63.0-next.24",
+    "@theia/ai-vercel-ai": "1.63.0-next.24",
+    "@theia/bulk-edit": "1.63.0-next.24",
+    "@theia/callhierarchy": "1.63.0-next.24",
+    "@theia/collaboration": "1.63.0-next.24",
+    "@theia/console": "1.63.0-next.24",
+    "@theia/core": "1.63.0-next.24",
+    "@theia/debug": "1.63.0-next.24",
+    "@theia/dev-container": "1.63.0-next.24",
+    "@theia/editor": "1.63.0-next.24",
+    "@theia/editor-preview": "1.63.0-next.24",
+    "@theia/external-terminal": "1.63.0-next.24",
+    "@theia/file-search": "1.63.0-next.24",
+    "@theia/filesystem": "1.63.0-next.24",
+    "@theia/getting-started": "1.63.0-next.24",
+    "@theia/keymaps": "1.63.0-next.24",
+    "@theia/markers": "1.63.0-next.24",
+    "@theia/memory-inspector": "1.63.0-next.24",
+    "@theia/messages": "1.63.0-next.24",
+    "@theia/metrics": "1.63.0-next.24",
+    "@theia/mini-browser": "1.63.0-next.24",
+    "@theia/monaco": "1.63.0-next.24",
+    "@theia/navigator": "1.63.0-next.24",
+    "@theia/outline-view": "1.63.0-next.24",
+    "@theia/output": "1.63.0-next.24",
+    "@theia/plugin-dev": "1.63.0-next.24",
+    "@theia/plugin-ext": "1.63.0-next.24",
+    "@theia/plugin-ext-vscode": "1.63.0-next.24",
+    "@theia/preferences": "1.63.0-next.24",
+    "@theia/process": "1.63.0-next.24",
+    "@theia/property-view": "1.63.0-next.24",
+    "@theia/remote": "1.63.0-next.24",
+    "@theia/scm": "1.63.0-next.24",
+    "@theia/search-in-workspace": "1.63.0-next.24",
+    "@theia/secondary-window": "1.63.0-next.24",
+    "@theia/task": "1.63.0-next.24",
+    "@theia/terminal": "1.63.0-next.24",
+    "@theia/timeline": "1.63.0-next.24",
+    "@theia/toolbar": "1.63.0-next.24",
+    "@theia/typehierarchy": "1.63.0-next.24",
+    "@theia/userstorage": "1.63.0-next.24",
+    "@theia/variable-resolver": "1.63.0-next.24",
+    "@theia/vsx-registry": "1.63.0-next.24",
+    "@theia/workspace": "1.63.0-next.24",
     "fs-extra": "^9.0.1",
-    "theia-ide-product-ext": "1.62.100"
+    "theia-ide-product-ext": "1.62.101"
   },
   "devDependencies": {
-    "@theia/cli": "1.62.1",
-    "@theia/native-webpack-plugin": "1.62.1"
+    "@theia/cli": "1.63.0-next.24",
+    "@theia/native-webpack-plugin": "1.63.0-next.24"
   },
   "scripts": {
     "clean": "theia clean && rimraf node_modules",
