--- a/theia-extensions/product/package.json
+++ b/theia-extensions/product/package.json
@@ -1,13 +1,13 @@
 {
   "private": true,
   "name": "theia-ide-product-ext",
-  "version": "1.62.100",
+  "version": "1.62.101",
   "description": "Eclipse Theia IDE Product Branding",
   "dependencies": {
-    "@theia/core": "1.62.1",
-    "@theia/getting-started": "1.62.1",
-    "@theia/vsx-registry": "1.62.1",
-    "@theia/workspace": "1.62.1",
+    "@theia/core": "1.63.0-next.24",
+    "@theia/getting-started": "1.63.0-next.24",
+    "@theia/vsx-registry": "1.63.0-next.24",
+    "@theia/workspace": "1.63.0-next.24",
     "inversify": "^6.0.1"
   },
   "devDependencies": {
