Add AI editor package
Signed-off-by: Simon Graband <sgraband@eclipsesource.com>

--- a/applications/electron/package.json
+++ b/applications/electron/package.json
@@ -59,6 +59,7 @@
     "@theia/ai-chat-ui": "1.63.0-next.24",
     "@theia/ai-code-completion": "1.63.0-next.24",
     "@theia/ai-core": "1.63.0-next.24",
+    "@theia/ai-editor": "1.63.0-next.24",
     "@theia/ai-google": "1.63.0-next.24",
     "@theia/ai-history": "1.63.0-next.24",
     "@theia/ai-huggingface": "1.63.0-next.24",
