Update to Theia 1.62.2
Removed ai-editor for now. Added issue to readd it later.

Signed-off-by: Simon Graband <sgraband@eclipsesource.com>

--- a/theia-extensions/product/package.json
+++ b/theia-extensions/product/package.json
@@ -1,13 +1,13 @@
 {
   "private": true,
   "name": "theia-ide-product-ext",
-  "version": "1.62.101",
+  "version": "1.62.200",
   "description": "Eclipse Theia IDE Product Branding",
   "dependencies": {
-    "@theia/core": "1.63.0-next.52",
-    "@theia/getting-started": "1.63.0-next.52",
-    "@theia/vsx-registry": "1.63.0-next.52",
-    "@theia/workspace": "1.63.0-next.52",
+    "@theia/core": "1.62.2",
+    "@theia/getting-started": "1.62.2",
+    "@theia/vsx-registry": "1.62.2",
+    "@theia/workspace": "1.62.2",
     "inversify": "^6.0.1"
   },
   "devDependencies": {
