--- a/theia-extensions/updater/package.json
+++ b/theia-extensions/updater/package.json
@@ -1,12 +1,12 @@
 {
   "private": true,
   "name": "theia-ide-updater-ext",
-  "version": "1.62.101",
+  "version": "1.62.200",
   "description": "Eclipse Theia IDE Updater",
   "dependencies": {
-    "@theia/core": "1.63.0-next.52",
-    "@theia/output": "1.63.0-next.52",
-    "@theia/preferences": "1.63.0-next.52",
+    "@theia/core": "1.62.2",
+    "@theia/output": "1.62.2",
+    "@theia/preferences": "1.62.2",
     "electron-log": "^4.3.0",
     "electron-updater": "5.3.0",
     "fs-extra": "^10.0.0",
