Add extensions to browser and electron variant
Add `@theia/ai-editor` as it was recently introduced.
Added `@theia/preview` and `@theia/scanoss` as they were indirectly installed previously.
This should make it more clear, that we ship them.

Signed-off-by: Simon Graband <sgraband@eclipsesource.com>

--- a/applications/browser/package.json
+++ b/applications/browser/package.json
@@ -52,6 +52,7 @@
     "@theia/ai-chat-ui": "1.63.0",
     "@theia/ai-code-completion": "1.63.0",
     "@theia/ai-core": "1.63.0",
+    "@theia/ai-editor": "1.63.0",
     "@theia/ai-google": "1.63.0",
     "@theia/ai-history": "1.63.0",
     "@theia/ai-huggingface": "1.63.0",
@@ -90,9 +91,11 @@
     "@theia/plugin-ext": "1.63.0",
     "@theia/plugin-ext-vscode": "1.63.0",
     "@theia/preferences": "1.63.0",
+    "@theia/preview": "1.63.0",
     "@theia/process": "1.63.0",
     "@theia/property-view": "1.63.0",
     "@theia/remote": "1.63.0",
+    "@theia/scanoss": "1.63.0",
     "@theia/scm": "1.63.0",
     "@theia/search-in-workspace": "1.63.0",
     "@theia/secondary-window": "1.63.0",
