Add ai-mcp-ui and ai-core-ui packages
Fixes #561

Signed-off-by: Simon Graband <sgraband@eclipsesource.com>

--- a/applications/browser/package.json
+++ b/applications/browser/package.json
@@ -52,6 +52,7 @@
     "@theia/ai-chat-ui": "1.64.0",
     "@theia/ai-code-completion": "1.64.0",
     "@theia/ai-core": "1.64.0",
+    "@theia/ai-core-ui": "1.64.0",
     "@theia/ai-editor": "1.64.0",
     "@theia/ai-google": "1.64.0",
     "@theia/ai-history": "1.64.0",
@@ -59,6 +60,7 @@
     "@theia/ai-ide": "1.64.0",
     "@theia/ai-llamafile": "1.64.0",
     "@theia/ai-mcp": "1.64.0",
+    "@theia/ai-mcp-ui": "1.64.0",
     "@theia/ai-ollama": "1.64.0",
     "@theia/ai-openai": "1.64.0",
     "@theia/ai-scanoss": "1.64.0",
