Set env variables for all steps
Also properly name the workflow.

Signed-off-by: Simon Graband <sgraband@eclipsesource.com>

--- a/.github/workflows/build-next.yml
+++ b/.github/workflows/build-next.yml
@@ -1,4 +1,4 @@
-name: Build, package and test
+name: Build linux next version
 
 on:
   workflow_dispatch:
@@ -27,15 +27,16 @@ jobs:
         with:
           python-version: "3.11"
 
+      - name: Export build variables
+        run: |
+          echo "THEIA_VERSION=next" >> $GITHUB_ENV
+          echo "PACKAGE_VERSION=$(jq -r .version package.json)" >> $GITHUB_ENV
+          echo "THEIA_IDE_VERSION=$(jq -r .version package.json)-next-$(date +%d-%m-%y)" >> $GITHUB_ENV
+
       - name: Build prod package
         shell: bash
         run: |
-          THEIA_VERSION=next
-          # Bump minor version in package.json
           yarn version --minor --no-git-tag-version
-          # Get the new version
-          PACKAGE_VERSION=$(jq -r .version package.json)
-          THEIA_IDE_VERSION="${PACKAGE_VERSION}-next-$(date +"%d-%m-%y")"
           yarn --skip-integrity-check --network-timeout 100000
           yarn version --new-version $THEIA_IDE_VERSION --no-git-tag-version
           yarn lerna version $THEIA_IDE_VERSION --no-push --no-git-tag-version --yes
@@ -58,5 +59,5 @@ jobs:
         with:
           name: linux
           path: |
-            applications/electron/dist/TheiaIDE-$THEIA_IDE_VERSION.AppImage
+            applications/electron/dist/TheiaIDE-${{ env.THEIA_IDE_VERSION }}.AppImage
           retention-days: 7
